fix: overflow

--- a/blocks/profile/__activity/profile__activity.css
+++ b/blocks/profile/__activity/profile__activity.css
@@ -3,6 +3,22 @@
   font-size: var(--font-size-main);
   font-weight: var(--font-weight-400);
   line-height: var(--line-height-main);
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 500px;
+}
+
+@media screen and (max-width: 1030px) {
+  .profile__activity {
+    max-width: 420px;
+  }
+}
+
+@media screen and (max-width: 770px) {
+  .profile__activity {
+    max-width: 350px;
+  }
 }
 
 @media screen and (max-width: 710px) {
@@ -15,5 +31,6 @@
   .profile__activity {
     font-size: 14px;
     line-height: 17px;
+    max-width: 235px;
   }
 }
